manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokedex
  namespace: local
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: pokedex
          image: devops1600/pokedex:v0.0.1
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 25
            periodSeconds: 5
