manifests/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: pokedex-svc
  namespace: local
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
